--- a/style.css
+++ b/style.css
@@ -638,3 +638,44 @@ nav{
 
     transition: transform 0.15s ease, opacity 0.15s ease;
 }
+
+.partnership-and-compliance{
+    background-color: #151616;
+    /* padding: 6rem 1.5rem 7rem; */
+    padding: 1rem 1.5rem 7rem;
+}
+
+.parent-part-and-compli {
+    max-width: 1100px;
+    margin: 0 auto;
+
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    column-gap: 3rem;
+}
+
+.partnership, .compliance{
+    display: flex;
+    flex-direction: column;
+    gap: 1.25rem;
+}
+
+.partnership-icon, .compliance-icon {
+    width: 40px;
+    height: 40px;
+    object-fit: contain;
+}
+
+.partnership-title, .compliance-title {
+    font-size: 1.125rem;
+    font-weight: 600;
+    letter-spacing: -0.01em;
+    line-height: 1.3;
+}
+
+.partnership-text, .compliance-text{
+    font-size: 1rem;
+    line-height: 1.6;
+    opacity: 0.75;
+    max-width: 520px;
+}
