--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ nav{
     border-radius: 999px;
 
     background-color: lab(100% 0 0 / 0.15);
-    backdrop-filter: blur(12px);
+    /* backdrop-filter: blur(12px); */
 
     text-decoration: none;
     color: #ffffff;
@@ -188,9 +188,9 @@ nav{
     transition: background-color 0.2s ease;
 }
 
-.suggestion-link:hover{
+/* .suggestion-link:hover{
     background-color: lab(100% 0 0 / 0.07);
-}
+} */
 
 .badge{
     display: inline-flex;
@@ -230,9 +230,9 @@ nav{
     transition: transform 0.2s ease;
 }
 
-.suggestion-link:hover .suggestion-arrow {
+/* .suggestion-link:hover .suggestion-arrow {
     transform: translateX(2px);
-}
+} */
 
 .hero-section {
     /* position: relative;
@@ -679,3 +679,4 @@ nav{
     opacity: 0.75;
     max-width: 520px;
 }
+
