--- a/style.css
+++ b/style.css
@@ -699,3 +699,30 @@ nav{
   /* optional polish */
     object-fit: cover;
 }
+
+.story-logos{
+    width: 100%;
+    background: #151616;
+    padding: 0 1.5rem 4rem;  /* top | sides | bottom */
+}
+
+.str-logo-parent{
+    max-width: 1100px;
+    margin: 0 auto;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+
+    /* gap: 0.5rem; */
+    flex-wrap: wrap;
+}
+
+.str-logo-parent img {
+    height: 30px;
+    width: auto;
+
+    /* opacity: 1; */
+    /* filter: grayscale(100%); */
+    /* transition: opacity 0.2s ease, filter 0.2s ease; */
+}
